[tool.poetry]
name = "allwek-taiwan"
version = "0.1.0"
description = ""
authors = ["Coco <coco_chang@megaforce.com.tw>"]
readme = "README.md"
packages = [{include = "allwek"}]


[tool.poetry.dependencies]
python = ">=3.9,<3.14"



[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
